--- a/templates/newlover.html
+++ b/templates/newlover.html
@@ -15,23 +15,21 @@
                 <tr>
                     <td></td>
                     <td>
-                        <input type="radio" name="gender" value="1" checked> Male
-                        <input type="radio" name="gender" value="0"> Female
+                        <input type="radio" name="gender" value="1" checked> Nam
+                        <input type="radio" name="gender" value="0"> Nữ
                     </td>
                 </tr>
                 <tr>
-                    <td><label>Ten</label></td>
+                    <td><label>Tên:</label></td>
                     <td><input type="text" name="fullname"></td>
                 </tr>
-                <TD><label>DOB</label></TD>
                 <tr>
-                    <td><label>Date</label></td>
-                    <td><input type="text" name="date" placeholder="month/date"></td>
-                    <td><label>Year</label></td>
-                    <td><input type="text" name="year"></td>
+                    <td><label>DOB:</label></td>
+                    <td><input type="text" name="date" placeholder="tháng/ngày"></td>
+                    <td><input type="text" name="year" placeholder="năm"></td>
                 </tr>
                 <tr>
-                    <td><label>City</label></td>
+                    <td><label>Địa chỉ:</label></td>
                     <td><select name="city" id="city">
                         <option value="1">Hanoi</option>
                         <option value="2">Da nang</option>
@@ -39,7 +37,7 @@
                     </select></td>
                 </tr>
                 <tr>
-                    <td><label>Like</label></td>
+                    <td><label>Sở thích:</label></td>
                     <td>
                         <input type="checkbox" name="like" value="1"> An uong <br>
                         <input type="checkbox" name="like" value="2"> Shopping <br>
@@ -47,12 +45,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><label>Description</label></td>
-                    <td><input type="text" name="description"></td>
+                    <td><label>Mô tả:</label></td>
+                    <!-- <td><input type="text" name="description"></td> -->
+                    <td><textarea name="description" id="description" cols="20" rows="5"></textarea></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><button type="submit">Next</button></td>
+                    <td><button type="submit">Hoàn tất</button></td>
                 </tr>
             </table>
         </form>
