--- a/templates/gowhere.html
+++ b/templates/gowhere.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    haha
 </body>
 </html>
