--- a/templates/newlover.html
+++ b/templates/newlover.html
@@ -10,7 +10,7 @@
 <body>
     <div class="d-flex p-3">
         <!-- <img src="../static/image/chamhoi-icon-96.png" alt="" class="avatar mr-4"> -->
-        <form method="POST" onsubmit="get_action()" class="bot-mess">
+        <form method="POST" class="bot-mess">
             <table>
                 <tr>
                     <td></td>
