--- a/templates/newlover.html
+++ b/templates/newlover.html
@@ -13,6 +13,9 @@
         <form method="POST" class="bot-mess">
             <table>
                 <tr>
+                    <input type="text" name="form_type" value="2" style="display:none">
+                </tr>
+                <tr>
                     <td></td>
                     <td>
                         <input type="radio" name="gender" value="1" checked> Nam
