--- a/templates/love.html
+++ b/templates/love.html
@@ -106,11 +106,11 @@
                         {%if age >= 24 %}
                             {%for like in like%}
                                 {%if like == '1'%}
-                                <a>L4</a>
+                                Nha hang 
                                 {%elif like == '2'%}
-                                <a>L5</a>
+                                Sieu thi
                                 {%elif like == '3'%}
-                                <a>l6</a>
+                                Nha nghi
                                 {%endif%}
                             {%endfor%}
                         {%endif%}
@@ -120,11 +120,11 @@
                         {%if age < 24 %}
                             {%for like in like%}
                                 {%if like == '1'%}
-                                <a>L4</a>
+                                Nha hang
                                 {%elif like == '2'%}
-                                <a>L5</a>
+                                Nha nghi
                                 {%elif like == '3'%}
-                                <a href="">L6</a>
+                                Sieu thi
                                 {%endif%}
                             {%endfor%}
                         {%endif%}
