--- a/templates/nhahang.html
+++ b/templates/nhahang.html
@@ -10,14 +10,14 @@
                   <div class="carousel-item active">
                         <li class="ldc-item ng-scope" ng-repeat="item in Items">
                                 <div class="ldc-item-img" style="position: relative; bottom: 0;">
-                                    <a target="_blank" ng-href="/ho-chi-minh/quan-cua-hoa" href="/ho-chi-minh/quan-cua-hoa" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
+                                    <a target="_blank" ng-href="/ho-chi-minh/quan-cua-hoa" href="https://foody.vn/ho-chi-minh/quan-cua-hoa" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
                                         <img ng-src="https://images.foody.vn/res/g4/31427/prof/s640x400/foody-mobile-22-jpg.jpg" src="https://images.foody.vn/res/g4/31427/prof/s640x400/foody-mobile-22-jpg.jpg">
                                     </a>
                                 </div>
                                 <div class="ldc-item-header">
                                     <div class="ldc-item-h-name">
                                         <h2>
-                                            <a ng-href="/ho-chi-minh/quan-cua-hoa" target="_blank" href="/ho-chi-minh/quan-cua-hoa" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
+                                            <a ng-href="/ho-chi-minh/quan-cua-hoa" target="_blank" href="https://foody.vn/ho-chi-minh/quan-cua-hoa" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
                                                 <span ng-bind="item.Name" class="ng-binding">Quán Cua Hoa</span>
                                             </a>
                                         </h2>
@@ -32,14 +32,14 @@
                   <div class="carousel-item">
                         <li class="ldc-item ng-scope" ng-repeat="item in Items">
                                 <div class="ldc-item-img" style="position: relative; bottom: 0;">
-                                    <a target="_blank" ng-href="/ho-chi-minh/moc-rieu-nuong" href="/ho-chi-minh/moc-rieu-nuong" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
+                                    <a target="_blank" ng-href="/ho-chi-minh/moc-rieu-nuong" href="https://foody.vn/ho-chi-minh/moc-rieu-nuong" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
                                         <img ng-src="https://images.foody.vn/res/g21/201010/prof/s640x400/foody-mobile-29-jpg.jpg" src="https://images.foody.vn/res/g21/201010/prof/s640x400/foody-mobile-29-jpg.jpg">
                                     </a>
                                 </div>
                                 <div class="ldc-item-header">
                                     <div class="ldc-item-h-name">
                                         <h2>
-                                            <a ng-href="/ho-chi-minh/moc-rieu-nuong" target="_blank" href="/ho-chi-minh/moc-rieu-nuong" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
+                                            <a ng-href="/ho-chi-minh/moc-rieu-nuong" target="_blank" href="https://foody.vn/ho-chi-minh/moc-rieu-nuong" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
                                                 <span ng-bind="item.Name" class="ng-binding">Mộc - Riêu &amp; Nướng - Võ Văn Kiệt</span>
                                             </a>
                                         </h2>
@@ -53,14 +53,14 @@
                   <div class="carousel-item">
                         <li class="ldc-item ng-scope" ng-repeat="item in Items">
                                 <div class="ldc-item-img" style="position: relative; bottom: 0;">
-                                    <a target="_blank" ng-href="/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" href="/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
+                                    <a target="_blank" ng-href="/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" href="https://foody.vn/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
                                         <img ng-src="https://images.foody.vn/res/g25/242101/prof/s640x400/foody-mobile-12-jpg-959-636149695117450335.jpg" src="https://images.foody.vn/res/g25/242101/prof/s640x400/foody-mobile-12-jpg-959-636149695117450335.jpg">
                                     </a>
                                 </div>
                                 <div class="ldc-item-header">
                                     <div class="ldc-item-h-name">
                                         <h2>
-                                            <a ng-href="/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" target="_blank" href="/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
+                                            <a ng-href="/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" target="_blank" href="https://foody.vn/ho-chi-minh/kimbap-fc-nguyen-phuc-nguyen" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
                                                 <span ng-bind="item.Name" class="ng-binding">Kimbap City - Món Ăn Hàn Quốc</span>
                                             </a>
                                         </h2>
@@ -74,14 +74,14 @@
                   <div class="carousel-item">
                         <li class="ldc-item ng-scope" ng-repeat="item in Items">
                                 <div class="ldc-item-img" style="position: relative; bottom: 0;">
-                                    <a target="_blank" ng-href="/ho-chi-minh/lau-mam-quan-vy" href="/ho-chi-minh/lau-mam-quan-vy" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
+                                    <a target="_blank" ng-href="/ho-chi-minh/lau-mam-quan-vy" href="https://foody.vn/ho-chi-minh/lau-mam-quan-vy" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)" ng-init="ImpressionGa(item,'O_DAU_', $index, DistrictId)">
                                         <img ng-src="https://images.foody.vn/res/g5/46397/prof/s640x400/foody-mobile-19-1-jpg-858-635537393539011687.jpg" src="https://images.foody.vn/res/g5/46397/prof/s640x400/foody-mobile-19-1-jpg-858-635537393539011687.jpg">
                                     </a>
                                 </div>
                                 <div class="ldc-item-header">
                                     <div class="ldc-item-h-name">
                                         <h2>
-                                            <a ng-href="/ho-chi-minh/lau-mam-quan-vy" target="_blank" href="/ho-chi-minh/lau-mam-quan-vy" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
+                                            <a ng-href="/ho-chi-minh/lau-mam-quan-vy" target="_blank" href="https://foody.vn/ho-chi-minh/lau-mam-quan-vy" ng-click="ClickGA(item,'O_DAU_', $index, DistrictId)">
                                                 <span ng-bind="item.Name" class="ng-binding">Lẩu Mắm Quán Vy</span>
                                             </a>
                                         </h2>
