--- a/templates/nhanghi.html
+++ b/templates/nhanghi.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="../static/css/nhanghi.css">
 </head>
 <body>
-        <div class="page_detail">
+        <img src="../static/image/chamhoi-icon-96.png" alt="" class="avatar mr-2">
+
+        <div class="bot-mess page_detail">
                    <h2 style="text-align: center;"><span style="color:#0000FF;"><strong>1. Blue Moon – nhà nghỉ giá rẻ gần Quận Hoàn Kiếm, Hà Nội</strong></span></h2>
                    <p><strong><em>Địa chỉ cụ thể</em></strong>: Số 90 Cầu Gõ, Quận Cầu Giấy, Hà Nội.</p>
                    <p><strong><em>Giá rẻ:</em></strong> 400.000 đồng/ 1 phòng (tùy vào từng thời điểm)</p>
